force-app/main/default/objects/Club_Program__c/Club_Program__c.object-meta.xml
<CustomObject>
    <label>Club Program</label>
    <nameField>
        <label>Club Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Club Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>