force-app/main/default/objects/Club_Program__c/fields/Activating_Ended_Program__c.field-meta.xml
<CustomField>
    <fullName>Activating_Ended_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this option if you want activate recent Program and to bring back fees.</inlineHelpText>
    <label>Activating Ended Program?</label>
    <type>Checkbox</type>
</CustomField>