force-app/main/default/objects/Club_Program__c/fields/Base_Fee__c.field-meta.xml
<CustomField>
    <fullName>Base_Fee__c</fullName>
    <formula>Club_Days__c *  Fee_Per_Day__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>