force-app/main/default/objects/Club_Program__c/fields/Club_Days__c.field-meta.xml
<CustomField>
    <fullName>Club_Days__c</fullName>
    <label>Club Days</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>