force-app/main/default/objects/Club_Program__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>Program end date</inlineHelpText>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>