force-app/main/default/objects/Club_Program__c/fields/Fee_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Fee_Per_Day__c</fullName>
    <label>Fee Per Day</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>