force-app/main/default/objects/Club_Program__c/fields/Four_Kid_Fee__c.field-meta.xml
<CustomField>
    <fullName>Four_Kid_Fee__c</fullName>
    <formula>Three_Kids_Fee__c + (Base_Fee__c  * ( 1 - Fourth_Kid_Discound__c ) +  Additional_Fees__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Four Kid Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>