force-app/main/default/objects/Club_Program__c/fields/Fourth_Kid_Discound__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Kid_Discound__c</fullName>
    <label>Fourth Kid Discound</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>