force-app/main/default/objects/Club_Program__c/fields/GrandTotalFee__c.field-meta.xml
<CustomField>
    <fullName>GrandTotalFee__c</fullName>
    <label>GrandTotalFee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>