force-app/main/default/objects/Club_Program__c/fields/One_Kid_Fee__c.field-meta.xml
<CustomField>
    <fullName>One_Kid_Fee__c</fullName>
    <formula>Base_Fee__c  +  Additional_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Club Days multiplied by fee per day plus Additional Fee</inlineHelpText>
    <label>One Kid Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>