force-app/main/default/objects/Club_Program__c/fields/Program_Deactivated_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_Deactivated_Date__c</fullName>
    <inlineHelpText>This time shows when this program Ended by the user</inlineHelpText>
    <label>Program Deactivated Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>