force-app/main/default/objects/Club_Program__c/fields/Second_Kid_Discount__c.field-meta.xml
<CustomField>
    <fullName>Second_Kid_Discount__c</fullName>
    <inlineHelpText>Give the percentage discount for second kid.</inlineHelpText>
    <label>Second Kid Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>