force-app/main/default/objects/Club_Program__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the program is used to manipulate payments in parent object get relevant balance.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Upcoming</fullName>
            </value>
            <value>
                <fullName>Ended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>