force-app/main/default/objects/Club_Program__c/fields/Third_Kid_Discount__c.field-meta.xml
<CustomField>
    <fullName>Third_Kid_Discount__c</fullName>
    <label>Third Kid Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>