force-app/main/default/objects/Club_Program__c/fields/Three_Kids_Fee__c.field-meta.xml
<CustomField>
    <fullName>Three_Kids_Fee__c</fullName>
    <formula>Two_Kids_Fee__c + (Base_Fee__c * ( 1-Third_Kid_Discount__c ) +  Additional_Fees__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Three Kids Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>