force-app/main/default/objects/Club_Program__c/fields/Two_Kids_Fee__c.field-meta.xml
<CustomField>
    <fullName>Two_Kids_Fee__c</fullName>
    <formula>One_Kid_Fee__c + (Base_Fee__c * (1-Second_Kid_Discount__c) +  Additional_Fees__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Two Kids Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>