force-app/main/default/objects/Club_Program__c/listViews/Active_Programs.listView-meta.xml
<ListView>
    <fullName>Active_Programs</fullName>
    <columns>NAME</columns>
    <columns>Base_Fee__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Ended</value>
    </filters>
    <label>Active Programs</label>
</ListView>